fix for the section line being too small (just made it span the whole screen for now)

--- a/style.css
+++ b/style.css
@@ -95,10 +95,12 @@ html {
 
 .section-line {
     height: 2px;
+    position: relative;
     max-width: 100vw;
-    width: calc(100% + 4rem);
+    width: 100vw;
+    left: 50%;
+    margin-left: -50vw;
     background-color: #080808;
-    margin: 0 -2rem; 
 }
 
 .projects-grid {
